# textual-plot

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
docs/: reference.md
docs/examples/: legends.py
reference/: index.html
search/: search_index.json
src/textual_plot/: __init__.py  axis_formatter.py  canvas.py  color_utils.py  demo.py  hires.py  plot_widget.py  ticks.py  treemap_utils.py
tests/: barplot.py  datetimeaxis.py  errorbar.py  test_formatters.py  test_ticks.py  test_transformations.py  test_treemap.py  treemap.py
