[project]
name = "textual-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Fokkema", email = "davidfokkema@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "textual>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "rust-just>=1.38.0",
    "textual-dev>=1.7.0",
]
